@@ -1,0 +1,8 @@
+Processing test74...
+
+Warnings...
+
+test_input/test74.py:17: __getattr__ should never return None, raise an exception if not found
+test_input/test74.py:22: __getattribute__ should never return None, raise an exception if not found
+test_input/test74.py:30: Function returns a value and also implicitly returns None
+test_input/test74.py:30: __getattr__ should never return None, raise an exception if not found
