@@ -1,10 +1,12 @@
 
 Version 0.8.8   - xx January 2002
+  * Add check if __getattr[ibute]__ returns None, should raise an exception
   * Allow pychecker to be imported (in your code do: import pychecker.check)
   * Using vars() for format string argument works like locals()
   * Make unusedNames a prefix, so emptyVal, unusedVal, etc are also ignored
   * Fix -a/--initattr warning to actually warn when attributes 
         are set outside of __init__(), but not in __init__()
+  * Fix case where an implicit return did not generate a warning
   * Fix spurious warnings for unreachable code (not enough to enable, yet)
   * Fix spurious warnings for integer division from:  (x + 100.0) / 10
   * Fix spurious warnings for implicit returns when raise in except: clause
